<resources>
    <string name="app_name">E Rojgar Kendra</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="exit">Exit</string>
    <string name="token_id">token</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="squarecamera__request_write_storage_permission_text">Approval is needed to save your photo on your device</string>
    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->

    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="get_right_job">Get the Right Job</string>
    <string name="job_acc_skill">Jobs according to <br> your Skills</br></string>
    <string name="Rs">\u20B9</string>
    <string name="add_remark">Add Your Remark</string>


    <!--Splash Screen-->

    <string name="place_text">Place</string>
    <string name="me_text">me</string>
    <string name="copyright">EDUERP © 2021</string>

    <!--Strings-->

    <string name="sign_up_login_text">Sign Up / Login</string>
    <string name="cap_sign_up_login_text">Sign Up / Login</string>
    <string name="otp_verify_text">Your OTP will expire 1:20 min</string>
    <string name="resend_otp_text">Resend OTP</string>
    <string name="verify_otp_text">VERIFY</string>
    <string name="sign_in_sing_up">Login in / Sign Up</string>
    <string name="better_exp_str">For a better experinace</string>
    <string name="didnt_received_opt_str">Didn\'t receive OTP</string>
    <string name="otp_verify_time_str">Your OTP will expire 1:20 min</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="skip_text">SKIP</string>
    <string name="upload_cv">Upload CV</string>
    <string name="save">SAVE</string>
    <string name="posted_on">Posted on : 29-03-2020</string>
    <string name="salary">Salary</string>
    <string name="client_name">Client Name</string>
    <string name="job_type">Job Types</string>
    <string name="current_status">Current Status : </string>
    <string name="job_location">Job Location</string>
    <string name="job_opening">350 Openings</string>
    <string name="no_vacancy_available">No vacancy available</string>
    <string name="no_upcoming_interview">No Upcoming Interview</string>
    <string name="no_appliped_interview">No Applied Job/Interview</string>
    <string name="no_job_in_hand">No job in hand</string>
    <string name="client_remark">Client Remark :-</string>
    <string name="student_remark">Student Remark :-</string>
    <string name="apply">Apply</string>
    <string name="view">View</string>
    <string name="set_filter">Set Filter</string>
    <string name="applly_filter">Apply Filter</string>
    <string name="add">Add</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>


    <!--Headers-->
    <string name="header_personal_details">Personal Details :</string>
    <string name="header_residential_details">Residential Details :</string>
    <string name="header_qualification_details">Qualification &amp; Experience Details :</string>
    <string name="header_course_details">Course Details :</string>
    <string name="header_resume">My Resume :</string>
    <string name="header_employee_referral">Employee Referral :</string>
    <string name="header_job_description">Job Description :</string>
    <string name="header_responsibilities">Job Responsibility :</string>
    <string name="header_job_benifit">Job Benefit :</string>
    <string name="header_skill_required">Skills Required :</string>
    <string name="header_prefered_gender">Preferred Gender :</string>

    Experience

    <string name="header_exp_required">Experience Required :</string>
    <string name="header_min_qualification_required">Minimum Qualification Required :</string>


    <!--Hints-->

    <string name="mobile_no_hint">Mobile Number</string>
    <string name="add_remark_hint">Add Remark</string>
    <string name="name_hint">Name</string>
    <string name="phone_no_hint">Phone Number</string>
    <string name="email_hint">Email Id</string>
    <string name="dob_hint">Date Of Birth</string>
    <string name="language_hing">Language Known</string>
    <string name="state_hing">State</string>
    <string name="city_hing">City/District</string>
    <string name="qualification_type_hint">Qualification Type</string>
    <string name="select_status_hint">Select Status</string>
    <string name="exp_hint">Experienced</string>
    <string name="exp_in_years_hint">Experience in years</string>
    <string name="designation_hint">Designation/Job Role</string>
    <string name="salary_hint">Salary</string>
    <string name="centre_hint">Centre name</string>
    <string name="project_hint">Project name</string>
    <string name="course_hint">Course name</string>
    <string name="emp_id_hint">Employee Code</string>
    <string name="batch_hint">Batch name</string>
    <string name="skill_hint">Skills</string>
    <string name="upload_document">Upload Document</string>
    <string name="select_doc">Select Documents</string>
    <string name="doc_type">Select Document</string>
    <string name="doc_note">Notes</string>
    <string name="upload_doc">Upload Document</string>
    <string name="upload">Upload</string>

</resources>