<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        card_view:cardCornerRadius="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <TextView
                android:id="@+id/headertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/add_remark"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_remark_lnr"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/proceddbuttonlayout"
                android:layout_toRightOf="@+id/header1"
                app:boxStrokeColor="@color/reg_tc_bg"
                app:hintTextColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_remark_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:hint="@string/add_remark_hint"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"

                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ok"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/ok"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>