<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_hot_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        card_view:cardCornerRadius="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/jobdetailslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_6sdp">


            <LinearLayout
                android:id="@+id/job_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/salary_text_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_job_posted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="end"
                        android:text="@string/posted_on"
                        android:textSize="@dimen/_7sdp"></TextView>


                    <TextView
                        android:id="@+id/salary_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/salary"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_17sdp"
                        android:textStyle="bold" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/client_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/client_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/client_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12sdp" />


                </RelativeLayout>



                <RelativeLayout
                    android:id="@+id/vacantitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/vacancy_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text=""
                        android:textColor="@color/default_color_android"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/job_text_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/job_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/job_type"
                        android:textColor="@color/default_color_android"
                        android:textSize="@dimen/_9sdp"
                        android:textStyle="bold" />


                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_4sdp"

                    android:background="@color/default_color_android"></View>



                <RelativeLayout
                    android:id="@+id/location_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp">

                    <ImageView
                        android:id="@+id/location_img"
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:src="@drawable/icon_city_jobs" />

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@id/location_img"
                        android:text="@string/job_location"
                        android:textColor="@color/default_color_android"
                        android:textSize="@dimen/_7sdp" />


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/vacancy_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_4sdp">

                    <ImageView
                        android:id="@+id/vacancy_img"
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"

                        android:src="@drawable/icons_job_openings" />

                    <TextView
                        android:id="@+id/vacancy_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@id/vacancy_img"
                        android:text="@string/job_opening"
                        android:textColor="@color/default_color_android"
                        android:textSize="@dimen/_7sdp" />


                </RelativeLayout>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/jobdetailslayout"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4sdp"
                android:weightSum="2">

                <Button
                    android:id="@+id/reject_job"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/reject"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/accept_job"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>