<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        card_view:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_remark"
                android:textStyle="bold"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_remark_lnr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/reg_tc_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/header1"
            android:layout_marginTop="10dp"
            app:hintTextColor="@android:color/black"
            android:layout_toLeftOf="@+id/proceddbuttonlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_remark_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/bg_reg_name"
                android:hint="@string/add_remark_hint" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/addRemarkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_margin="@dimen/_5sdp"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_5sdp"/>


    </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>